Simplify getEngineFactories